kubernetes/argocd/applications/notate/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notate
  labels:
    app: notate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notate
  template:
    metadata:
      labels:
        app: notate
    spec:
      containers:
      - name: notate
        image: registry.digitalocean.com/kubeden/notate:latest-asd
        ports:
        - containerPort: 3000
